--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,5 +6,7 @@
     "trailingComma": "all",
     "bracketSpacing": true,
     "jsxBracketSameLine": true,
-    "endOfLine": "auto"
+    "endOfLine": "auto",
+    "plugins": ["prettier-plugin-tailwindcss"],
+    "tailWindConfig": "./tailwind.config.js"
 }
