--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "money-saver",
+    "name": "coffeeshop",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -64,7 +64,9 @@
         "javascript-obfuscator": "^4.1.0",
         "lint-staged": "^14.0.1",
         "postcss": "^8.4.29",
+        "postcss-nesting": "^12.0.1",
         "prettier": "^3.0.3",
+        "prettier-plugin-tailwindcss": "^0.5.6",
         "tailwindcss": "^3.3.3",
         "webpack-obfuscator": "^3.5.1"
     },
