--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,8 @@
         "no-eval": "error",
         "no-useless-return": "off",
         "jsx-a11y/label-has-associated-control": "off",
+        "jsx-a11y/click-events-have-key-events": "off",
+        "jsx-a11y/no-static-element-interactions": "off",
         "import/first": "off",
         "import/extensions": ["error", "ignorePackages", { "ts": "never", "tsx": "never" }],
         "react/jsx-filename-extension": ["warn", { "extensions": [".tsx"] }],
