--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,5 +7,5 @@
     "bracketSpacing": true,
     "endOfLine": "auto",
     "plugins": ["prettier-plugin-tailwindcss"],
-    "tailWindConfig": "./tailwind.config.js"
+    "tailwindConfig": "./tailwind.config.js"
 }
