--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "eslint-plugin-prettier": "^5.0.0",
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "file-loader": "^6.2.0",
         "husky": "^8.0.3",
         "javascript-obfuscator": "^4.1.0",
         "lint-staged": "^14.0.1",
