--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
         "import/first": "off",
         "import/extensions": ["error", "ignorePackages", { "ts": "never", "tsx": "never" }],
         "react/jsx-filename-extension": ["warn", { "extensions": [".tsx"] }],
+        "react/require-default-props": "off",
         "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
         "@typescript-eslint/no-var-requires": "off"
     },
