--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
         "@types/node": "^16.7.13",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "chart.js": "^4.4.0",
+        "faker": "^6.6.6",
         "react": "^18.2.0",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.46.1",
         "react-icons": "^4.11.0",
