Add component ProductTable for ProductPage

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,8 @@
         "no-console": "warn",
         "no-eval": "error",
         "no-useless-return": "off",
+        "no-param-reassign": "off",
+        "react/no-unescaped-entities": "off",
         "jsx-a11y/label-has-associated-control": "off",
         "jsx-a11y/click-events-have-key-events": "off",
         "jsx-a11y/no-static-element-interactions": "off",
