--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/node": "^16.7.13",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "axios": "^1.6.1",
         "chart.js": "^4.4.0",
         "faker": "^6.6.6",
         "react": "^18.2.0",
@@ -23,6 +24,7 @@
         "react-router-dom": "^6.15.0",
         "react-scripts": "5.0.1",
         "react-spinners": "^0.13.8",
+        "redux-logger": "^3.0.6",
         "typescript": "^4.4.2",
         "web-vitals": "^2.1.0"
     },
@@ -54,6 +56,7 @@
         ]
     },
     "devDependencies": {
+        "@types/redux-logger": "^3.0.12",
         "autoprefixer": "^10.4.15",
         "eslint": "^8.49.0",
         "eslint-config-airbnb": "^19.0.4",
