--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react-scripts": "5.0.1",
         "react-spinners": "^0.13.8",
         "redux-logger": "^3.0.6",
+        "reselect": "^4.1.8",
         "typescript": "^4.4.2",
         "web-vitals": "^2.1.0"
     },
