Add Login API and implement ProtectedRoute

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,9 @@
         "no-useless-return": "off",
         "no-param-reassign": "off",
         "no-shadow": "off",
+        // Note: you must disable the base rule as it can report incorrect errors
+        "no-empty-function": "off",
+        "@typescript-eslint/no-empty-function": "warn",
         "react/no-unescaped-entities": "off",
         "jsx-a11y/label-has-associated-control": "off",
         "jsx-a11y/click-events-have-key-events": "off",
