--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
+        "build": "react-scripts build",
         "test": "react-scripts test",
         "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
         "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
@@ -60,15 +60,15 @@
     "devDependencies": {
         "@types/redux-logger": "^3.0.12",
         "autoprefixer": "^10.4.15",
-        "eslint": "^8.49.0",
-        "eslint-config-airbnb": "^19.0.4",
+        "eslint": "^8.2.0",
+        "eslint-config-airbnb": "19.0.4",
         "eslint-config-prettier": "^9.0.0",
         "eslint-import-resolver-typescript": "^3.6.0",
-        "eslint-plugin-import": "^2.28.1",
-        "eslint-plugin-jsx-a11y": "^6.7.1",
+        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-prettier": "^5.0.0",
-        "eslint-plugin-react": "^7.33.2",
-        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react": "^7.28.0",
+        "eslint-plugin-react-hooks": "^4.3.0",
         "file-loader": "^6.2.0",
         "husky": "^8.0.3",
         "javascript-obfuscator": "^4.1.0",
